--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - MusicPlayer_Project</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/MusicPlayer.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
