Toevoegen van create methode voor playlist

--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Home/Index.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Home/Index.cshtml
@@ -4,8 +4,20 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    
-    <p>
-        Overzicht
-    </p>
+
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="card">
+            <h3 class="card-title">Glassmorphism is awesome</h3>
+            <p>A modern CSS UI library based on the glassmorphism design principles that will help you quickly design and build beautiful websites and applications.</p>
+
+        </div>
+    </div>
+
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="card">
+            <h3 class="card-title">Glassmorphism is awesome</h3>
+            <p>A modern CSS UI library based on the glassmorphism design principles that will help you quickly design and build beautiful websites and applications.</p>
+
+        </div>
+    </div>
 </div>
