--- a/MusicPlayer_Project/MusicPlayer_Project/wwwroot/css/MusicPlayer.css
+++ b/MusicPlayer_Project/MusicPlayer_Project/wwwroot/css/MusicPlayer.css
@@ -1,7 +1,34 @@
 ﻿body {
     padding: 4.5rem;
     margin: 0;
-    background: #edc0bf;
+    background: #bfdbed;
     background: linear-gradient(90deg, #edc0bf 0,#c4caef 58%);
     font-family: 'Inter', sans-serif;
+}
+
+.card {
+    width: auto;
+    height: auto;
+    padding: 2rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+    background: rgba(255, 255, 255, .7);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(10px);
+}
+
+.card-title {
+    margin-top: 0;
+    margin-bottom: .5rem;
+    font-size: 1.2rem;
+}
+
+p, a {
+    font-size: 1rem;
+}
+
+a {
+    color: #4d4ae8;
+    text-decoration: none;
 }
