--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Index.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Index.cshtml
@@ -17,7 +17,7 @@
             </th>
         </tr>
     </thead>
-    <tbody>
+    @*<tbody>
         @foreach (var playlist in Model.Playlists)
         {
             <tr>
@@ -31,5 +31,5 @@
                 </td>
             </tr>
         }
-    </tbody>
+    </tbody>*@
 </table>
