--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Playlist" asp-action="Index">Playlist</a>
+                            <a class="nav-link text-dark" asp-area="Playlist" asp-controller="Playlist" asp-action="Index">Playlist</a>
                         </li>
                     </ul>
                 </div>
