Create new pagina toegankelijk zonder opmaak

--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Details.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>@Model.Name</h1>
 
 <p>
-    Voornaam: @Model.Name
+    Name: @Model.Name
 </p>
 <p>
     Datum aangemaakt @Html.DisplayFor(ModelItem => Model.DateAdded)
