--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Create.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model MusicPlayer_Project.ViewModels.CreatePlaylistViewModel
 
 @{ 
-    ViewData["Title"] = "create";
+    ViewData["Title"] = "Create";
+    Layout = "";
 }
 
 <h1>Create</h1>
@@ -16,6 +17,9 @@
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
