--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Index.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Playlist/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@model MusicPlayer_Project.ViewModels.PlaylistListViewModel
-@{
-    ViewData["Title"] = "index";
-}
 
 <h2>index</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<div class="card col-md-4" style="float: left;">
+    <div class="card-body">
+        <a class="nav-link" asp-controller="Overview" asp-action="PlaylistOverview">Playlists</a>
+    </div>
+</div>
 
 <table>
     <thead>
@@ -17,7 +20,7 @@
             </th>
         </tr>
     </thead>
-    @*<tbody>
+    <tbody>
         @foreach (var playlist in Model.Playlists)
         {
             <tr>
@@ -31,5 +34,5 @@
                 </td>
             </tr>
         }
-    </tbody>*@
+    </tbody>
 </table>
