--- a/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
+++ b/MusicPlayer_Project/MusicPlayer_Project/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="User" asp-controller="User" asp-action="Index">User</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="About" asp-controller="About" asp-action="Index">About</a>
+                        </li>
                     </ul>
                 </div>
             </div>
